software-center (1.1.8) UNRELEASED; urgency=low

  * softwarecenter/view/appdetailsview.py:
    - replace thumbnail checking thread with (much nicer) gio
      code

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Jan 2010 11:53:53 +0100

software-center (1.1.7) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/availablepane.py:
    - fixes in the search when in a category with sub-categories
  * data/software-center.menu.in:
    - use SCDontDisplay and SCType in System Packages menu to
      allow searching in all system packages again
  * README:
    - updated to include section term
  * data/software-center.menu.in:
    - move the previous seperate applications.menu in here to support 
      subcategories that mix applications and non-applications
      this makes /usr/share/app-install/desktop/applications.menu
      obsolete for software-center
    - update to reflect the sub-category layout from the spec
  * softwarecenter/db/database.py:
    - fix sorting for mixed app/package display
  * softwarecenter/db/update.py:
    - write out archive section (mail, admin, ...) into the xapian DB
  * softwarecenter/view/catview.py:
    - fix sub-category jumping back to (0,0) on going back
    - support mixed app/package section querries
    - support menu additions via "/usr/share/app-install/menu.d/*.menu"
    - support SCChannel as match for (sub)menus
  * softwarecenter/db/database.py:
    - simplfy get get_query_list_from_search_entry() code
  * softwarecenter/view/availablepane.py:
    - fix performance problem for empty queries and simply the code

  [ Gary Lasker ]
  * softwarecenter/distro/Ubuntu.py:
    - merged string fix from Shane Fagan, many thanks (LP: #494845)
  * po/software-center.pot:
    - updated 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 06 Jan 2010 19:03:28 +0100

software-center (1.1.6) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/pendingview.py:
    - fix race in _append_transaction()