@@ -3,6 +3,9 @@ software-center (1.1.8) UNRELEASED; urgency=low
   * softwarecenter/view/appdetailsview.py:
     - replace thumbnail checking thread with (much nicer) gio
       code
+  * softwarecenter/app.py:
+    - simplify state save logic
+    - fix crash in ConfigParser (LP: #494899)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Jan 2010 11:53:53 +0100
 
